Update version to 1.0.6, plumb logging configuration, and add log level to example config
- Add log level config (e.g., enable debug logs via environment variables or .env.local)
- Fixes a bug where status did not contain origin_id (instead old repeater_id property), causing disconnects
- Cleans up duplicate logging around client disconnect/reconnects
- Adds owner public key support
- Add client string to auth token
- Generate fresh auth token on each reconnect attempt
- Exit after 12 consecutive reconnect failures
- Add jitter to reconnect attempts
- Cleans up MQTT-related logging with a consistent prefix
- Add WebSocket ping thread to help keep ws connections alive
- Add statistics tracking for packets, bytes, publish failures, reconnects, and uptime
- Add device statistics (battery, uptime, errors, queue, radio stats)

--- a/.env
+++ b/.env
@@ -54,6 +54,7 @@ MCTOMQTT_MQTT1_PASSWORD=
 # Authentication - Auth Token (alternative to username/password)
 MCTOMQTT_MQTT1_USE_AUTH_TOKEN=false
 MCTOMQTT_MQTT1_TOKEN_AUDIENCE=
+MCTOMQTT_MQTT1_TOKEN_OWNER=
 
 # Per-broker topic overrides (optional)
 # MCTOMQTT_MQTT1_TOPIC_STATUS=meshcore/{IATA}/{PUBLIC_KEY}/status
