Add disallowed command configuration for remote serial feature
- Introduce MCTOMQTT_REMOTE_SERIAL_DISALLOWED_COMMANDS in .env to specify commands that are blocked for security reasons.
- Implement logic in mctomqtt.py to parse and enforce disallowed commands during remote serial execution.
- Log warnings for blocked commands to enhance security monitoring.

--- a/.env
+++ b/.env
@@ -108,6 +108,14 @@ MCTOMQTT_REMOTE_SERIAL_NONCE_TTL=120
 # Command timeout in seconds - how long to wait for serial response
 MCTOMQTT_REMOTE_SERIAL_COMMAND_TIMEOUT=10
 
+# Comma-separated list of disallowed command prefixes (case-insensitive)
+# These commands will be rejected for security reasons by default
+#   get prv.key  - exports the device private key
+#   set prv.key  - imports/overwrites the device private key
+#   erase        - erases the entire file system
+#   password     - changes the admin password
+MCTOMQTT_REMOTE_SERIAL_DISALLOWED_COMMANDS=get prv.key,set prv.key,erase,password
+
 # -----------------------------------------------------------------------------
 # System Configuration
 # -----------------------------------------------------------------------------
