--- a/.env.local.example
+++ b/.env.local.example
@@ -31,7 +31,7 @@ MCTOMQTT_MQTT1_PASSWORD=your_password
 # -----------------------------------------------------------------------------
 # MQTT Broker 2 - Example: Public LetsMesh.net Analyzer MQTT with Auth Token
 # -----------------------------------------------------------------------------
-# Learn more: https://analyzer.letsme.sh/observer/onboard
+# Learn more: https://analyzer.letsmesh.net/observer/onboard
 MCTOMQTT_MQTT2_ENABLED=false
 MCTOMQTT_MQTT2_SERVER=mqtt-us-v1.letsmesh.net
 MCTOMQTT_MQTT2_PORT=443
